--- a/chess.html
+++ b/chess.html
@@ -2,9 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>DataVoid - Cheap AI Chess!</title>
+  <title>DataVoid - AI Chess!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="https://datavoid-team.github.io/chessaistyle.css">
+<link rel="stylesheet" href="https://service.datavoid.in/chessaistyle.css">
 
 </head>
 <body>
@@ -65,6 +65,6 @@
   </g>
 </svg>
 <!-- partial -->
-  <script  src="https://datavoid-team.github.io/chessaiscript.js"></script>
+  <script  src="https://service.datavoid.in/chessaiscript.js"></script>
 </body>
 </html>
