--- a/connect.html
+++ b/connect.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>DataVoid - Pure CSS Connect 4</title>
+  <title>DataVoid</title>
   <link rel="stylesheet" href="https://service.datavoid.in/connectstyle.css">
 
 </head>
