--- a/compiler.html
+++ b/compiler.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Button Example</title>
+    <title>DataVoid Compiler</title>
 <style>
 /* CSS */
 .button {
