--- a/compiler.html
+++ b/compiler.html
@@ -13,6 +13,7 @@
   cursor: pointer;
   position: relative;
   z-index: 0;
+  display:inline-block;
   border-radius: 10px;
   user-select: none;
   -webkit-user-select: none;
