--- a/compiler.html
+++ b/compiler.html
@@ -77,13 +77,13 @@
     <br>
 <center>
     <!-- Create 8 buttons -->
-    <button class="button" onclick="openSite('https://www.programiz.com/python-programming/online-compiler/')">Python</button>
-    <button class="button" onclick="openSite('https://www.programiz.com/c-programming/online-compiler/')">C#</button>
-    <button class="button" onclick="openSite('https://www.programiz.com/cpp-programming/online-compiler/')">C++</button>
-    <button class="button" onclick="openSite('https://www.programiz.com/java-programming/online-compiler/')">Java</button>
-    <button class="button" onclick="openSite('https://www.programiz.com/javascript/online-compiler/')">JavaScript</button>
-    <button class="button" onclick="openSite('https://www.programiz.com/sql/online-compiler/')">SQL</button>
-    <button class="button" onclick="openSite('https://www.programiz.com/html/online-compiler/')">HTML</button>
+    <button class="button" onclick="openSite('https://www.programiz.com/python-programming/online-compiler/')">Python</button>&nbsp;
+    <button class="button" onclick="openSite('https://www.programiz.com/c-programming/online-compiler/')">C#</button>&nbsp;
+    <button class="button" onclick="openSite('https://www.programiz.com/cpp-programming/online-compiler/')">C++</button>&nbsp;
+    <button class="button" onclick="openSite('https://www.programiz.com/java-programming/online-compiler/')">Java</button>&nbsp;
+    <button class="button" onclick="openSite('https://www.programiz.com/javascript/online-compiler/')">JavaScript</button>&nbsp;
+    <button class="button" onclick="openSite('https://www.programiz.com/sql/online-compiler/')">SQL</button>&nbsp;
+    <button class="button" onclick="openSite('https://www.programiz.com/html/online-compiler/')">HTML</button>&nbsp;
 </center><hr>
 
     <!-- Create the iframe that will display the website -->
