--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="box__description-text">It seems like you are in our service packages server.</div>
     </div>
     
-    <a href="https://www.datavoid.in" class="box__button">Go Home</a>
+    <a href="https://www.datavoid.in" class="box__button">Visit Homesite</a>
     
   </div>
   
