--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>DataVoid Service Packages </title>
   <link rel="stylesheet" href="./style.css">
-
+  <meta http-equiv='cache-control' content='no-cache'> 
+  <meta http-equiv='expires' content='0'> 
+  <meta http-equiv='pragma' content='no-cache'>
 </head>
 <body>
 <!-- partial:index.partial.html -->
