--- a/stellar/index.html
+++ b/stellar/index.html
@@ -15,7 +15,7 @@
         type="text/css" />
     <!-- Stylesheet Link -->
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
-    <title>Stellar Drift Game</title>
+    <title>Stellar Dash</title>
 </head>
 
 <body>
