--- a/space/game.html
+++ b/space/game.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Space Shooter</title>
+	<title>Space Invaders</title>
 	<link rel="shortcut icon" id="favicon" />
 	<link rel="stylesheet" , href="style.css">
 </head>
