--- a/mem/game.html
+++ b/mem/game.html
@@ -74,6 +74,7 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             z-index: 1000;
+            color:white;
         }
 
         #win-modal h2 {
