--- a/mem/game.html
+++ b/mem/game.html
@@ -14,7 +14,7 @@
             margin: 0;
             background: url('space-calatop.gif') no-repeat center center fixed;
             background-size: contain;
-            background-color: black;
+            background-color: #05000c;
             color: black;
         }
 
