--- a/connect.html
+++ b/connect.html
@@ -6,7 +6,10 @@
   <link rel="stylesheet" href="https://service.datavoid.in/connectstyle.css">
 
 </head>
-<body>
+<body background="bg1.jpg" style="background-size: cover;
+            background-position: center;
+            height: 100vh;
+            overflow: hidden;">
 <!-- partial:index.partial.html -->
 <form>
   <div class="board">
