--- a/squidgame.html
+++ b/squidgame.html
@@ -25,6 +25,7 @@
 <body>
   <video autoplay>
     <source src="sq.mp4" type="video/mp4">
+    <!-- Add additional source elements for different video formats if needed -->
     Your browser does not support the video tag.
   </video>
 
