--- a/squidgame.html
+++ b/squidgame.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <video id="myVideo" preload="auto">
+  <video id="myVideo" preload="auto" controls>
     <source src="sq.mp4" type="video/mp4">
     <!-- Add additional source elements for different video formats if needed -->
     Your browser does not support the video tag.
