--- a/squidgame.html
+++ b/squidgame.html
@@ -11,23 +11,39 @@
       overflow: hidden;
       width: 100%;
       height: 100%;
+      position: relative;
     }
     video {
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
+    .play-button {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      border: none;
+      border-radius: 50%;
+      padding: 20px;
+      cursor: pointer;
+      z-index: 1;
+    }
   </style>
 </head>
 <body>
-  <video id="myVideo" preload="auto" controls>
+  <video id="myVideo" preload="auto">
     <source src="sq.mp4" type="video/mp4">
     <!-- Add additional source elements for different video formats if needed -->
     Your browser does not support the video tag.
   </video>
+  <button class="play-button" id="playButton">&#9654;</button>
 
   <script>
     var video = document.getElementById("myVideo");
+    var playButton = document.getElementById("playButton");
 
     // Trigger full-screen mode
     function launchFullScreen(element) {
@@ -42,18 +58,21 @@
       }
     }
 
-    // Play the video when the page loads and go full screen (on desktop)
-    window.onload = function() {
-      if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-        // For mobile devices, play the video only on user interaction
-        document.body.addEventListener('click', function() {
-          video.play();
-        }, { once: true });
-      } else {
-        video.play(); // For desktop, play the video automatically
+    // Play the video when the play button is clicked and go full screen
+    playButton.addEventListener('click', function() {
+      video.play(); // Play the video
+      launchFullScreen(document.documentElement); // Go full screen
+      playButton.style.display = "none"; // Hide the play button
+    });
+
+    // Play the video and go full screen on mobile devices when the user taps the video
+    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+      video.addEventListener('click', function() {
+        video.play(); // Play the video
         launchFullScreen(document.documentElement); // Go full screen
-      }
-    };
+        playButton.style.display = "none"; // Hide the play button
+      });
+    }
 
     // Redirect to another website after the video ends
     video.addEventListener('ended', function() {
