--- a/squidgame.html
+++ b/squidgame.html
@@ -4,88 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Squid Game</title>
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-      position: relative;
-    }
-    video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    .play-button {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: rgba(0, 0, 0, 0.7);
-      color: white;
-      border: none;
-      border-radius: 50%;
-      padding: 20px;
-      cursor: pointer;
-      z-index: 1;
-    }
-  </style>
+  
+  <script type="text/javascript">
+    window.location.href = "https://link.datavoid.in/squidgame";
+  </script>
 </head>
 <body>
-  <video id="myVideo" preload="auto">
-    <source src="sq.mp4" type="video/mp4">
-    <!-- Add additional source elements for different video formats if needed -->
-    Your browser does not support the video tag.
-  </video>
-  <button class="play-button" id="playButton">&#9654;</button>
-
-  <script>
-    var video = document.getElementById("myVideo");
-    var playButton = document.getElementById("playButton");
-
-    // Trigger full-screen mode
-    function launchFullScreen(element) {
-      if (element.requestFullscreen) {
-        element.requestFullscreen();
-      } else if (element.mozRequestFullScreen) {
-        element.mozRequestFullScreen();
-      } else if (element.webkitRequestFullscreen) {
-        element.webkitRequestFullscreen();
-      } else if (element.msRequestFullscreen) {
-        element.msRequestFullscreen();
-      }
-    }
-
-    // Check if the device is in portrait mode and rotate it to landscape mode
-    function rotateToLandscape() {
-      if (window.innerHeight > window.innerWidth) {
-        alert("Please rotate your device to landscape mode for optimal viewing.");
-      }
-    }
-
-    // Play the video when the play button is clicked and go full screen
-    playButton.addEventListener('click', function() {
-      video.play(); // Play the video
-      launchFullScreen(document.documentElement); // Go full screen
-      playButton.style.display = "none"; // Hide the play button
-    });
-
-    // Check for landscape mode when the page loads
-    window.onload = function() {
-      rotateToLandscape();
-    };
-
-    // Redirect to another website after the video ends
-    video.addEventListener('ended', function() {
-      window.location.href = 'https://link.datavoid.in/squidgame'; 
-    });
-
-    // Troubleshooting
-    video.addEventListener('error', function() {
-      console.error('Error loading the video:', this.error);
-    });
-  </script>
+  <p>If you are not redirected automatically, follow this <a href="https://link.datavoid.in/squidgame">link</a>.</p>
+  
 </body>
 </html>
