--- a/pdf.html
+++ b/pdf.html
@@ -41,7 +41,7 @@
 <body>
 <br><br><br>
 <div class="container">
-  <img src="your_image.jpg" alt="Centered Image"><br>
+  <img src="pz.jpeg" alt="Centered Image" height="400" width="400"><br>
   <a href="path_to_your_pdf.pdf" class="download-button" download>Download PDF</a>
 </div>
 
