--- a/pdf.html
+++ b/pdf.html
@@ -9,7 +9,7 @@
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    
+    color:white;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -39,10 +39,12 @@
 </style>
 </head>
 <body>
+  
 <br><br><br>
 <div class="container">
+  <h3>Download the pdf and crack the password using the clue below</h3>
   <img src="pz.jpeg" alt="Centered Image" height="400" width="400"><br>
-  <a href="path_to_your_pdf.pdf" class="download-button" download>Download PDF</a>
+  <a href="clue.pdf" class="download-button" download>Download PDF</a>
 </div>
 
 </body>
