--- a/pdf.html
+++ b/pdf.html
@@ -44,7 +44,7 @@
 <div class="container">
   <h3>Download the pdf and crack the password using the clue below</h3>
   <img src="pz.jpeg" alt="Centered Image" height="400" width="400"><br>
-  <a href="clue.pdf" class="download-button" download>Download PDF</a>
+  <a href="https://data-void.com/clue.pdf" class="download-button" download>Download PDF</a>
 </div>
 
 </body>
